reasonably working version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8.4)
+
+#add_subdirectory(freq_test)
+
 set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/ArduinoToolchain.cmake)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -21,27 +24,30 @@ set(${PROJECT_NAME}_SRCS
         )
 
 # set(${PROJECT_NAME}_HDRS)
-set(${PROJECT_NAME}_LIBS libscanf_flt.a)
+#set(${PROJECT_NAME}_LIBS libscanf_flt.a)
 # link_directories(${CMAKE_CURRENT_SOURCE_DIR}/)
 # add_subdirectory()
 #set(${PROJECT_NAME}_SKETCH t1.ino)
 
-set(${PROJECT_NAME}_PROGRAMMER avrdude)
+print_programmer_list()
 
-message(DEBUG system_${CMAKE_HOST_SYSTEM_NAME}_)
+#set(${PROJECT_NAME}_PROGRAMMER avrdude)
+set(${PROJECT_NAME}_PROGRAMMER avrispmkii)
+
+message(STATUS "SYSTEM ${CMAKE_HOST_SYSTEM_NAME}")
 
 if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Linux")
-    message(DEBUG Linux)
+    message(STATUS "platform Linux")
     set(${PROJECT_NAME}_PORT /dev/ttyACM0)
 elseif (${CMAKE_HOST_SYSTEM_NAME} EQUAL Windows)
-    message(DEBUG Windows)
+    message(STATUS "platform Windows")
     set(${PROJECT_NAME}_PORT COM6)
 else ()
-    message(DEBUG platform default)
+    message(STATUS "platform default")
     set(${PROJECT_NAME}_PORT COM6)
 endif ()
 
-message(DEBUG ${${PROJECT_NAME}_PORT})
+message(STATUS "PORT ${${PROJECT_NAME}_PORT}")
 
 set(${PROJECT_NAME}_AFLAGS -v)
 set(mega.upload.speed 115200)
